[package]
name = "waveletsm"
version = "0.1.0"
authors = ["cho45 <cho45@lowreal.net>"]
edition = "2021"
description = "waveletsm"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
#debug = true

[dependencies]
wasm-bindgen = "0.2.74"
console_error_panic_hook = "*"
num-complex = "0.4.4"
rustfft = "6.1.0"
js-sys = "0.3.66"
web-log = "1.0.1"

